--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
     margin: auto;
     padding: auto;
     box-sizing: border-box;
+    word-wrap: break-word;
 }
 body, #app {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -46,5 +47,7 @@ section.today nav {
 }
 section.today img {
     width: 148px;
+    max-width: 100%;
     height: 148px;
+    object-fit: cover;
 }
