Add precipitation probability

--- a/src/styles.css
+++ b/src/styles.css
@@ -53,8 +53,15 @@ section.today img {
 }
 
 .info {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    padding-top: 20px;
     width: 100%;
+    place-items: center;
+}
+.info .container {
+    text-align: start;
+    width: 100%;
+    max-width: 200px;
 }
