--- a/src/styles.css
+++ b/src/styles.css
@@ -40,6 +40,7 @@ section.today {
     min-height: 400px;
     max-width: 35em;
     background-color: #efefef;
+    border: 2px solid rgb(181, 181, 181);
     box-shadow: 0px 0px 10px 0.2px rgb(133, 133, 133);
 }
 section.today nav {
